--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
 
-* {
-      margin: 0;
-        padding: 0;
+html {
+      margin: 0 !important;
+        padding: 0 !important;
         box-sizing: border-box;
+          background: radial-gradient(circle, rgba(255, 243, 184, 1) 0%, rgba(196, 231, 183, 1) 100%) !important
 }
 
 body {
-font-family: 'IM Fell Great Primer', serif;
+font-family: "Alegre";
 font-size: 130%;
-background: rgb(255, 243, 184);
-  background: radial-gradient(circle, rgba(255, 243, 184, 1) 0%, rgba(196, 231, 183, 1) 100%);
+height: 100%;
+margin: 0.1px;
 }
 
