--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,16 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
 html {
-      margin: 0 !important;
-        padding: 0 !important;
-        box-sizing: border-box;
-          background: radial-gradient(circle, rgba(255, 243, 184, 1) 0%, rgba(196, 231, 183, 1) 100%) !important
+  height: 100% !important;
+  width: 100% !important;
 }
 
 body {
 font-family: 'Josefin Sans';
-font-size: 130%;
-height: 100%;
-margin: 0.2px;
+font-size: 120%;
+background: radial-gradient(circle, rgba(255, 243, 184, 1) 0%, rgba(196, 231, 183, 1) 100%);
+height: 100% !important;
+width: 100% !important;
 }
 
