✨ started to create cards

--- a/client/src/views/styles/Home.css
+++ b/client/src/views/styles/Home.css
@@ -1,19 +1,33 @@
 
-.home-container img {
-width: 30vh;
-margin-top: 11rem;
-margin-bottom: 3rem;
-}
-
 .home-container p {
-  margin-left: 20%;
-  margin-right: 20%;
-  text-align:center;
-
+  margin-top: 10rem;
+  margin-left: 10%;
+  margin-right: 10%;
+  color:rgb(25, 21, 17);
 }
+
+@media (max-width: 606px) {
+.home-container p {
+    margin-top: 6rem;
+    margin-left: 5%;
+    margin-right: 5%;
+    color: rgb(25, 21, 17);
+    font-size: 100%;
+  }
+}
+
+
+
 
 
 .home-container {
+  position:absolute;
+  min-height: 100%;
+  /* background-color: rgb(218, 241, 194); */
+  background-image: url("./assets/landing.png");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-attachment: fixed;
   display: flex;
   flex-direction: column;
   justify-content:space-between;
