--- a/client/src/components/styles/EncounterCards.css
+++ b/client/src/components/styles/EncounterCards.css
@@ -1,16 +1,20 @@
 .cards-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content:space-around;
-    align-items: center;
+
     margin-left: 1rem;
     margin-right: 1rem;
 }
 
-.one-card {
+.all-cards {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.one-card {
+
+    margin: 1rem;
 }
 
 
@@ -20,7 +24,7 @@
 
 #small-logo {
     width: 15vh;
-    margin-top: 8rem;
+    margin-top: 9rem;
     margin-bottom: 3rem;
     margin-left: auto;
     margin-right: auto;
