--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
 html {
-  height: 100% !important;
-  width: 100% !important;
+  min-height: 100% !important;
+  min-width: 100% !important;
 }
 
 body {
+background: radial-gradient(circle, rgba(255, 243, 184, 1) 0%, rgba(196, 231, 183, 1) 100%);
 font-family: 'Josefin Sans';
 font-size: 120%;
-background: radial-gradient(circle, rgba(255, 243, 184, 1) 0%, rgba(196, 231, 183, 1) 100%);
-height: 100% !important;
-width: 100% !important;
+min-height: 100% !important;
+min-width: 100% !important;
+margin: 0px !important;
 }
-
