--- a/client/src/components/EncounterCards/EncounterCards.css
+++ b/client/src/components/EncounterCards/EncounterCards.css
@@ -89,7 +89,7 @@ padding-left: 0.1rem;
 
 #username-text {
 font-size: 100%;
-color: rgb(33, 71, 97);
+color: rgb(28, 148, 179);
 }
 
 #posted-by {
@@ -107,7 +107,7 @@ color: rgb(91, 90, 90);
 
 #post-time-text {
     font-size: 100%;
-    color: rgb(33, 71, 97);
+    color: rgb(28, 148, 179);
 
 }
 
@@ -122,12 +122,15 @@ margin-bottom: -0.7rem;
     font-size: large;
     margin-left: auto;
     margin-right: auto;
+    display: block;
     width: 70%;
     background-color: rgb(190, 229, 173);
     height: 2.5rem;
     border: 1px solid rgb(91, 90, 90);
     border-radius: 5px;
     color: rgb(46, 43, 41);
+    text-decoration: none !important;
+    font-style: none !important;
 }
 
 #card-button:hover {
