--- a/client/src/components/EncounterCards/EncounterCards.css
+++ b/client/src/components/EncounterCards/EncounterCards.css
@@ -15,9 +15,8 @@
     align-items: center;
     margin-left: 2rem;
     margin-right: 2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
-
 
 .one-card {
     width: 22rem;
@@ -36,10 +35,6 @@
     object-fit:fill;
     border-radius: 5px;
     margin-bottom: 0.5rem;
-}
-
-.one-card p {
-    color:rgb(46, 43, 41);
 }
 
 .one-card hr {
@@ -122,20 +117,30 @@ margin-bottom: -0.7rem;
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 70%;
+    width: 50%;
     background-color: rgb(190, 229, 173);
     height: 2.5rem;
     border: 1px solid rgb(91, 90, 90);
     border-radius: 5px;
     color: rgb(46, 43, 41);
     text-decoration: none !important;
-    font-style: none !important;
+}
+
+#card-button:link {
+    text-decoration: none !important;
+}
+
+#card-button:visited {
+    text-decoration: none !important;
 }
 
 #card-button:hover {
     background-color: rgb(204, 241, 141);
+    text-decoration: none !important;
 }
 
 #card-button:active {
     background-color: rgb(188, 212, 180);
+    text-decoration: none !important;
 }
+
