--- a/client/src/components/EncounterDetails/EncounterDetails.css
+++ b/client/src/components/EncounterDetails/EncounterDetails.css
@@ -6,7 +6,7 @@
     align-items: center;
     margin-left: 1rem;
     margin-right: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 
@@ -39,7 +39,7 @@
             flex-wrap: wrap;
             flex-direction: row;
             align-items: center;
-            margin-bottom: -0.5rem;
+            margin-bottom: -0.6rem;
 }
 
 .avatar-and-username {
@@ -58,7 +58,7 @@
 .details-username {
     color: rgb(25, 125, 150);
     margin-left: 1rem;
-    margin-top: 0.6rem;
+    margin-top: 1rem;
 }
 
 
@@ -66,7 +66,7 @@
 margin-left: auto;
 margin-right: 0px;
 color: rgb(25, 125, 150);
-    margin-top: 0.6rem;
+    margin-top: 1rem;
 }
 
 .title p {
@@ -94,6 +94,12 @@ color: rgb(25, 125, 150);
     color: rgb(25, 125, 150)
 }
 
+.encounter-time {
+    display: flex;
+    flex-direction: row;
+    color: rgb(25, 125, 150)
+}
+
 .small-title {
     text-decoration: wavy;
         font-style: italic;
@@ -104,12 +110,21 @@ color: rgb(25, 125, 150);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: -1rem;
 }
 
 .info-and-map img {
     width: 60px;
         height: 60px;
         margin-left: auto;
+        cursor: pointer;
+
+}
+
+.details-title p {
+font-size: 110%;
+    color: rgb(31, 147, 49);
+    margin-bottom: 0.5rem;
 }
 
 
@@ -127,4 +142,8 @@ color: rgb(25, 125, 150);
             color: rgb(28, 148, 179);
             margin-bottom: -1rem;
         }
+}
+
+#map {
+    height: 180px;
 }
