--- a/client/src/components/EncounterDetails/EncounterDetails.css
+++ b/client/src/components/EncounterDetails/EncounterDetails.css
@@ -127,6 +127,18 @@ font-size: 110%;
     margin-bottom: 0.5rem;
 }
 
+.modal-header {
+    background: radial-gradient(rgb(228, 240, 239) 0%, rgb(204, 216, 220) 100%);
+        border-bottom: 2px dotted rgb(91, 90, 90);
+
+}
+
+.modal-body {
+    background: radial-gradient(rgb(228, 240, 239) 0%, rgb(204, 216, 220) 100%);
+        border-bottom: 1px solid rgb(91, 90, 90);
+        border-radius: 5px;
+
+}
 
 @media (max-width: 550px) {
 .avatar-username-and-post-time {
@@ -144,6 +156,4 @@ font-size: 110%;
         }
 }
 
-#map {
-    height: 180px;
-}
+
