--- a/client/src/components/GeneralMap/GeneralMap.css
+++ b/client/src/components/GeneralMap/GeneralMap.css
@@ -27,7 +27,7 @@ padding-bottom: 0.4rem;
     height: 61vh;
 }
 
-@media (max-width: 600) {
+@media (max-width: 700px) {
 .general-map-card {
         width: 85%;
 }
