--- a/client/src/components/EncounterCards/EncounterCards.css
+++ b/client/src/components/EncounterCards/EncounterCards.css
@@ -62,6 +62,7 @@
     border: none;
     width: 1.7rem;
     padding-top: 0.4rem;
+    cursor: pointer;
 }
 
 .fav-number {
@@ -126,12 +127,96 @@
     text-decoration: none !important;
 }
 
+#dropdown-toggle:hover,
 #card-button:hover {
     background-color: rgb(204, 241, 141);
     text-decoration: none !important;
 }
 
+#new-post-button:active,
+#dropdown-toggle:active,
 #card-button:active {
     background-color: rgb(188, 212, 180);
     text-decoration: none !important;
+}
+
+.panel-and-container {
+/* display: flex;
+flex-direction: column; */
+}
+
+.panel {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.search-input input {
+
+            border: 1px solid rgb(91, 90, 90);
+            border-radius: 5px;
+            font-size: 1.2rem;
+            height: 2.5rem;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
+            width: 21rem;
+
+}
+
+#new-post-button {
+    margin-left: 0.5rem;
+        background-color: rgb(244, 255, 148);
+    font-size: large;
+    width: 10rem;
+    height: 2.5rem;
+    border: 1px solid rgb(91, 90, 90);
+    border-radius: 5px;
+    color: rgb(46, 43, 41);
+}
+
+#new-post-button:hover {
+
+            background-color: rgb(240, 244, 116);
+}
+
+#dropdown-toggle {
+    margin-right: 0.5rem;
+}
+
+#dropdown-toggle {
+        font-size: large;
+            width: 10rem;
+            background-color: rgb(190, 229, 173);
+            height: 2.5rem;
+            border: 1px solid rgb(91, 90, 90);
+            border-radius: 5px;
+            color: rgb(46, 43, 41);
+
+}
+
+.dropdown-and-new {
+display: flex;
+flex-direction: row;
+margin-bottom: 1rem;
+}
+
+@media (max-width: 400px) {
+.dropdown-and-new {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1rem;
+    }
+
+        #new-post-button {
+            margin-left: 0rem;
+        }
+    
+        #dropdown-toggle {
+
+        margin-bottom: 1rem;
+        }
+
+        .search-input input {
+            width: 100%;
+        }
 }
