--- a/client/src/components/NewEncounterCard/NewEncounterCard.css
+++ b/client/src/components/NewEncounterCard/NewEncounterCard.css
@@ -39,7 +39,6 @@
 .newencounter-area,
 .newencounter-province,
 .newencounter-country,
-.newencounter-title,
 .newencounter-species,
 .newencounter-coordinates,
 .newencounter-encounter-time,
@@ -81,6 +80,10 @@
     border-radius: 5px;
     font-size: 1.2rem;
     padding-left: 0.3rem;
+}
+
+.newencounter-encounter-time input {
+    margin-left: 0.6rem;
 }
 
 .newencounter-upload-file {
