--- a/client/src/components/ProfileCard/ProfileCard.css
+++ b/client/src/components/ProfileCard/ProfileCard.css
@@ -92,20 +92,58 @@
     justify-content: space-evenly;
 }
 .one-user-encounter {
-    width: 13rem;
+    width: 25rem;
     margin: 0.5rem;
     border: 1px solid rgb(153, 154, 153);
     border-radius: 5px;
     background-color: rgba(109, 120, 75, 0.127);
     padding: 0.5rem;
+    display: flex;
+    flex-direction: row;
 }
 
 .one-user-encounter img {
     border-radius: 5px;
+    width: 8rem;
 }
-.one-user-encounter p {
-    margin-top: 0.5rem;
-    margin-bottom: -0.2rem;
+
+.one-user-encounter-text {
+    display: flex;
+    flex-direction: column;
+    float: left;
+    margin-left: 0.5rem;
+    padding-left: 0.5rem;
+    border-left: 2px rgba(46, 43, 41, 0.434) dashed;
+    height: 5.5rem;
+}
+
+#one-user-encounter-title {
     font-size: 90%;
     color: rgb(31, 147, 49);
+                text-align: left;
+}
+
+#one-user-encounter-species {
+    font-size: 90%;
+    float: left;
+    margin-right: auto;
+    margin-left: 0px;
+    margin-top: -1rem;
+    margin-bottom: -1rem;
+    color: rgb(25, 125, 150);
+}
+
+#one-user-encounter-country {
+    font-size: 90%;
+    float: left;
+    margin-right: auto;
+    margin-left: 0px;
+    padding-top: 1rem;
+    padding-bottom: -0.5rem;
+}
+
+@media (max-width: 490px) {
+.one-user-encounter {
+        width: 20rem;
+    }
 }
