--- a/client/src/components/Comments/Comments.css
+++ b/client/src/components/Comments/Comments.css
@@ -30,9 +30,10 @@
 }
 
 .avatar-username img {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 90px;
+    border: 3px solid rgba(121, 139, 122, 0.237);
 }
 
 .avatar-username p {
