--- a/client/src/components/EncounterDetails/EncounterDetails.css
+++ b/client/src/components/EncounterDetails/EncounterDetails.css
@@ -50,9 +50,10 @@
 }
 
 .avatar img {
-    width: 70px;
-    height: 70px;
+    width: 80px;
+    height: 80px;
     border-radius: 90px;
+    border: 5px solid rgba(121, 139, 122, 0.237);
 }
 
 .details-username {
