--- a/client/src/components/EncounterDetails/EncounterDetails.css
+++ b/client/src/components/EncounterDetails/EncounterDetails.css
@@ -163,6 +163,15 @@ color: rgb(25, 125, 150);
     transform: scale(1.2);
 }
 
+#spinner {
+    width: 3rem;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 9999;
+}
+
 
 @media (max-width: 500px) {
 .avatar-username-and-post-time {
@@ -179,7 +188,6 @@ color: rgb(25, 125, 150);
             margin-bottom: -1rem;
         }
 }
-
 
 @media (max-width: 440px) {
 .info-and-map img {
