--- a/client/src/components/NewEncounterCard/NewEncounterCard.css
+++ b/client/src/components/NewEncounterCard/NewEncounterCard.css
@@ -70,7 +70,7 @@
 
 .newencounter-encounter-time input {
     margin-left: 0.6rem;
-    min-height: 1rem !important;
+    height: 1rem;
 }
 
 .newencounter-experience textarea {
